# orrery

./: .gitignore  FFI.md  PLAN.md  README.md  moon.cabal  orrery.cabal
csrc/: ephemeris.c  ephemeris.h  raytrace.c  raytrace.h
ffi/: README.md  adder.c  main  main.dump-asm  main.dump-simpl  main.dump-stg  main.hs
src/: Main.hs
src/Moon/: Coords.hs  Display.hs  FFI.hs  Time.hs  Types.hs
src/Orrery/: Coords.hs  Display.hs  FFI.hs  Time.hs  Types.hs
