cabal-version:      3.0
name:               moon
version:            0.1.0.0
synopsis:           Predict the position of the Moon and render it
license:            MIT
author:             holmen1
build-type:         Simple

executable moon
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Moon.Types
                  , Moon.Time
                  , Moon.FFI
                  , Moon.Coords
                  , Moon.Display
  build-depends:    base >= 4.14 && < 5
  c-sources:        csrc/ephemeris.c
                  , csrc/raytrace.c
  include-dirs:     csrc
  ghc-options:      -Wall -O2
  cc-options:       -std=c99 -O2
