cabal-version:      3.4
name:               orrery
version:            0.1.0.0
synopsis:           Predict the position of the Moon and render it
license:            MIT
author:             holmen1
build-type:         Simple

executable orrery
  default-language:   GHC2021
  default-extensions: CApiFFI
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Orrery.Types
                  , Orrery.Time
                  , Orrery.FFI
                  , Orrery.Coords
                  , Orrery.Display
  build-depends:    base ^>= 4.18
  c-sources:        csrc/ephemeris.c
                  , csrc/raytrace.c
  include-dirs:     csrc
  ghc-options:      -Wall -O2
  cc-options:       -std=c99 -Wall -O2
